"Too many fonts!!!" gets printed on the console after repeatedly calling bpy.ops.wm.read_factory_settings() #47422

Closed
opened 2016-02-15 21:07:57 +01:00 by Agorgianitis Loukas · 4 comments

System Information
Windows 10 x64 Nvidia GT640

Blender Version
Broken: 2.76 473eff2 (2016-02-15 11:43)
Worked: 2.76 f337fea (2015-11-03 10:56)

Short description of error
Sample script:

  import bpy                            
  def reset_blend():                    
      bpy.ops.wm.read_factory_settings()
                                    
  while 1:                              
      reset_blend()

Exact steps for others to reproduce the error

  blender --factory-startup --background --python wat.py
**System Information** Windows 10 x64 Nvidia GT640 **Blender Version** Broken: 2.76 473eff2 (2016-02-15 11:43) Worked: 2.76 f337fea (2015-11-03 10:56) **Short description of error** Sample script: ``` import bpy def reset_blend(): bpy.ops.wm.read_factory_settings() while 1: reset_blend() ``` **Exact steps for others to reproduce the error** ``` blender --factory-startup --background --python wat.py

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @agorg_louk

Added subscriber: @agorg_louk
Campbell Barton self-assigned this 2016-02-15 21:09:35 +01:00

This issue was referenced by 2ecd67efa4

This issue was referenced by 2ecd67efa4aeadb442e094b795a9171149ccbab1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47422
No description provided.