Fix T47422: Factory startup loads too many fonts